# EAT

./: .travis.yml  CMakeLists.txt  LICENSE.txt  License.txt  README.md  ReadMe.txt  appveyor.yml  eat-test.cpp  eat.cpp  eat.h  eat.hpp  pstdint.h
linux32/: stdint.h
linux64/: stdint.h
x86/: stdint.h
